<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SunShine</string>
    <string name="hello_world">Hello world!</string>

    <string name="action_refresh" translatable="false">Refresh</string>
    <string name="title_activity_detail">Details</string>

    <string name="action_settings">Settings</string>
    <string name="action_map">Map Location</string>
    <string name="action_share">Share</string>

    <!-- Label for the location preference [CHAR LIMIT=30] -->
    <string name="pref_location_label">Location</string>

    <!-- Summary for the location preference [CHAR LIMIT=30] -->
    <string name="pref_location_summary">Enter a postal code for the default Location</string>

    <!-- Key name for storing location in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_location_key" translatable="false">location</string>

    <!-- Default postal code for location preferences [CHAR LIMIT = NONE] -->
    <string name="pref_location_default" translatable="false">94043</string>

    <!-- key name for storing temperature unit in SharedPreferences -->
    <string name="pref_temperature_unit_key" translatable="false">temperature_unit</string>

    <!-- Label for the temperature unit preference -->
    <string name="pref_temperature_unit_label">Temperature Unit</string>

    <!-- Summary for the temperature unit preference -->
    <string name="pref_temperature_unit_summary">Select a Temperature Unit</string>

    <string name="pref_temperature_unit_default" translatable="false">Metric</string>

    <string name="pref_units_imperial" translatable="false">Imperial</string>

    <string name="pref_units_metric" translatable="false">Metric</string>


</resources>
