<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:key="@string/pref_location_key"
        android:title="@string/pref_location_label"
        android:summary="@string/pref_location_summary"
        android:defaultValue="@string/pref_location_default"
        android:selectAllOnFocus="true"
        android:inputType="textCapWords"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLines="1" />

    <ListPreference
        android:key="@string/pref_temperature_unit_key"
        android:title="@string/pref_temperature_unit_label"
        android:summary="@string/pref_temperature_unit_summary"
        android:entries="@array/pref_temperature_unit_listentries"
        android:entryValues="@array/pref_temperature_unit_listvalues"
        android:defaultValue="@string/pref_temperature_unit_default" />

</PreferenceScreen>
